--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-flask==2.2.4
+flask==2.3.2
 joblib==1.2.0
-requests==2.27.1
-pd==1.5.3
-np==1.22.4
-sklearn==1.2.2
+requests==2.31.0
+pandas==2.0.2
+numpy>=1.17.3
+scikit-learn==1.2.2
+tensorflow==2.12.0
+gunicorn==20.1.0
